@@ -4,8 +4,9 @@ import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
 import static org.openmetadata.service.Entity.TEST_CASE;
 import static org.openmetadata.service.Entity.TEST_DEFINITION;
 import static org.openmetadata.service.Entity.TEST_SUITE;
+import static org.openmetadata.service.Entity.getEntityByName;
+import static org.openmetadata.service.Entity.getEntityReferenceByName;
 import static org.openmetadata.service.util.RestUtil.ENTITY_NO_CHANGE;
-import static org.openmetadata.service.util.RestUtil.ENTITY_UPDATED;
 import static org.openmetadata.service.util.RestUtil.LOGICAL_TEST_CASES_ADDED;
 
 import java.util.ArrayList;
@@ -14,18 +15,24 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.json.JsonPatch;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.UriInfo;
 import org.jdbi.v3.sqlobject.transaction.Transaction;
 import org.openmetadata.schema.EntityInterface;
+import org.openmetadata.schema.api.feed.CloseTask;
+import org.openmetadata.schema.api.feed.ResolveTask;
+import org.openmetadata.schema.entity.teams.User;
 import org.openmetadata.schema.tests.ResultSummary;
 import org.openmetadata.schema.tests.TestCase;
 import org.openmetadata.schema.tests.TestCaseParameter;
 import org.openmetadata.schema.tests.TestCaseParameterValue;
 import org.openmetadata.schema.tests.TestDefinition;
 import org.openmetadata.schema.tests.TestSuite;
+import org.openmetadata.schema.tests.type.Assigned;
+import org.openmetadata.schema.tests.type.Resolved;
+import org.openmetadata.schema.tests.type.TestCaseResolutionStatus;
+import org.openmetadata.schema.tests.type.TestCaseResolutionStatusTypes;
 import org.openmetadata.schema.tests.type.TestCaseResult;
 import org.openmetadata.schema.tests.type.TestCaseStatus;
 import org.openmetadata.schema.type.ChangeDescription;
@@ -35,6 +42,7 @@ import org.openmetadata.schema.type.EventType;
 import org.openmetadata.schema.type.FieldChange;
 import org.openmetadata.schema.type.Include;
 import org.openmetadata.schema.type.Relationship;
+import org.openmetadata.schema.type.TaskType;
 import org.openmetadata.schema.utils.EntityInterfaceUtil;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.exception.EntityNotFoundException;
@@ -66,25 +74,23 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
   }
 
   @Override
-  public TestCase setFields(TestCase test, Fields fields) {
+  public void setFields(TestCase test, Fields fields) {
     test.setTestSuites(fields.contains("testSuites") ? getTestSuites(test) : test.getTestSuites());
     test.setTestSuite(fields.contains(TEST_SUITE_FIELD) ? getTestSuite(test) : test.getTestSuite());
     test.setTestDefinition(fields.contains(TEST_DEFINITION) ? getTestDefinition(test) : test.getTestDefinition());
-    return test.withTestCaseResult(
+    test.withTestCaseResult(
         fields.contains(TEST_CASE_RESULT_FIELD) ? getTestCaseResult(test) : test.getTestCaseResult());
   }
 
   @Override
-  public TestCase clearFields(TestCase test, Fields fields) {
+  public void clearFields(TestCase test, Fields fields) {
     test.setTestSuites(fields.contains("testSuites") ? test.getTestSuites() : null);
     test.setTestSuite(fields.contains(TEST_SUITE) ? test.getTestSuite() : null);
     test.setTestDefinition(fields.contains(TEST_DEFINITION) ? test.getTestDefinition() : null);
-    return test.withTestCaseResult(fields.contains(TEST_CASE_RESULT_FIELD) ? test.getTestCaseResult() : null);
+    test.withTestCaseResult(fields.contains(TEST_CASE_RESULT_FIELD) ? test.getTestCaseResult() : null);
   }
 
-  public RestUtil.PatchResponse<TestCaseResult> patchTestCaseResults(
-      String fqn, Long timestamp, String user, JsonPatch patch) {
-    String change = ENTITY_NO_CHANGE;
+  public RestUtil.PatchResponse<TestCaseResult> patchTestCaseResults(String fqn, Long timestamp, JsonPatch patch) {
     TestCaseResult original =
         JsonUtils.readValue(
             daoCollection
@@ -94,22 +100,13 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
 
     TestCaseResult updated = JsonUtils.applyPatch(original, patch, TestCaseResult.class);
 
-    if (!Objects.equals(original.getTestCaseFailureStatus(), updated.getTestCaseFailureStatus())) {
-      updated.getTestCaseFailureStatus().setUpdatedBy(user);
-      updated.getTestCaseFailureStatus().setUpdatedAt(System.currentTimeMillis());
-      daoCollection
-          .dataQualityDataTimeSeriesDao()
-          .update(fqn, TESTCASE_RESULT_EXTENSION, JsonUtils.pojoToJson(updated), timestamp);
-      change = ENTITY_UPDATED;
-    }
-
     // set the test case result state in the test case entity if the state has changed
     if (!Objects.equals(original, updated)) {
-      TestCase testCase = dao.findEntityByName(fqn);
+      TestCase testCase = findByName(fqn, Include.NON_DELETED);
       setTestCaseResult(testCase, updated, false);
     }
 
-    return new RestUtil.PatchResponse<>(Response.Status.OK, updated, change);
+    return new RestUtil.PatchResponse<>(Response.Status.OK, updated, ENTITY_NO_CHANGE);
   }
 
   @Override
@@ -157,7 +154,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
         findFromRecords(test.getId(), entityType, Relationship.CONTAINS, TEST_SUITE);
     return records.stream()
         .map(testSuiteId -> Entity.<TestSuite>getEntity(TEST_SUITE, testSuiteId.getId(), "", Include.ALL, false))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private EntityReference getTestDefinition(TestCase test) {
@@ -210,10 +207,16 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
         test.getTestDefinition().getId(), test.getId(), TEST_DEFINITION, TEST_CASE, Relationship.APPLIED_TO);
   }
 
-  public RestUtil.PutResponse<?> addTestCaseResult(
+  public RestUtil.PutResponse<TestCaseResult> addTestCaseResult(
       String updatedBy, UriInfo uriInfo, String fqn, TestCaseResult testCaseResult) {
     // Validate the request content
-    TestCase testCase = dao.findEntityByName(fqn);
+    TestCase testCase = findByName(fqn, Include.NON_DELETED);
+
+    // set the test case resolution status reference if test failed
+    testCaseResult.setTestCaseResolutionStatusReference(
+        testCaseResult.getTestCaseStatus() != TestCaseStatus.Failed
+            ? null
+            : setTestCaseResolutionStatus(testCase, updatedBy));
 
     daoCollection
         .dataQualityDataTimeSeriesDao()
@@ -233,9 +236,33 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     return new RestUtil.PutResponse<>(Response.Status.CREATED, changeEvent, RestUtil.ENTITY_FIELDS_CHANGED);
   }
 
-  public RestUtil.PutResponse<?> deleteTestCaseResult(String updatedBy, String fqn, Long timestamp) {
+  private TestCaseResolutionStatus setTestCaseResolutionStatus(TestCase testCase, String updatedBy) {
+    String json =
+        daoCollection.testCaseResolutionStatusTimeSeriesDao().getLatestRecord(testCase.getFullyQualifiedName());
+
+    TestCaseResolutionStatus storedTestCaseResolutionStatus =
+        json != null ? JsonUtils.readValue(json, TestCaseResolutionStatus.class) : null;
+
+    if ((storedTestCaseResolutionStatus != null)
+        && (storedTestCaseResolutionStatus.getTestCaseResolutionStatusType()
+            != TestCaseResolutionStatusTypes.Resolved)) {
+      // if we already have a non resolve status then we'll simply return it
+      return storedTestCaseResolutionStatus;
+    }
+
+    // if the test case resolution is null or resolved then we'll create a new one
+    return new TestCaseResolutionStatus()
+        .withStateId(UUID.randomUUID())
+        .withTimestamp(System.currentTimeMillis())
+        .withTestCaseResolutionStatusType(TestCaseResolutionStatusTypes.New)
+        .withUpdatedBy(getEntityReferenceByName(Entity.USER, updatedBy, Include.ALL))
+        .withUpdatedAt(System.currentTimeMillis())
+        .withTestCaseReference(testCase.getEntityReference());
+  }
+
+  public RestUtil.PutResponse<TestCaseResult> deleteTestCaseResult(String updatedBy, String fqn, Long timestamp) {
     // Validate the request content
-    TestCase testCase = dao.findEntityByName(fqn);
+    TestCase testCase = findByName(fqn, Include.NON_DELETED);
     TestCaseResult storedTestCaseResult =
         JsonUtils.readValue(
             daoCollection
@@ -280,7 +307,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
 
       ResultSummary storedResultSummary = findMatchingResultSummary(resultSummaries, resultSummary.getTestCaseName());
 
-      if (!shouldUpdateResultSummary(storedResultSummary, timestamp, isDeleted)) {
+      if (!shouldUpdateResultSummary(storedResultSummary, timestamp)) {
         continue; // if the state should not be updated then nothing to do
       }
 
@@ -317,7 +344,7 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
         .orElse(null);
   }
 
-  private boolean shouldUpdateResultSummary(ResultSummary storedResultSummary, Long timestamp, boolean isDeleted) {
+  private boolean shouldUpdateResultSummary(ResultSummary storedResultSummary, Long timestamp) {
     return storedResultSummary == null || timestamp >= storedResultSummary.getTimestamp();
   }
 
@@ -472,8 +499,8 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     return new RestUtil.DeleteResponse<>(testCase, RestUtil.ENTITY_DELETED);
   }
 
-  @Transaction
   /** Remove test case from test suite summary and update test suite */
+  @Transaction
   private void removeTestCaseFromTestSuiteResultSummary(UUID testSuiteId, String testCaseFqn) {
     TestSuite testSuite = Entity.getEntity(TEST_SUITE, testSuiteId, "*", Include.ALL, false);
     testSuite.setSummary(null); // we don't want to store the summary in the database
@@ -566,6 +593,103 @@ public class TestCaseRepository extends EntityRepository<TestCase> {
     }
     afterCursor = testCaseRecords.get(testCases.size() - 1).getRank().toString();
     return getResultList(testCases, beforeCursor, afterCursor, total);
+  }
+
+  @Override
+  public FeedRepository.TaskWorkflow getTaskWorkflow(FeedRepository.ThreadContext threadContext) {
+    validateTaskThread(threadContext);
+    TaskType taskType = threadContext.getThread().getTask().getType();
+    if (EntityUtil.isTestCaseFailureResolutionTask(taskType)) {
+      return new TestCaseRepository.TestCaseFailureResolutionTaskWorkflow(threadContext);
+    }
+    return super.getTaskWorkflow(threadContext);
+  }
+
+  public static class TestCaseFailureResolutionTaskWorkflow extends FeedRepository.TaskWorkflow {
+    TestCaseResolutionStatusRepository testCaseResolutionStatusRepository;
+
+    TestCaseFailureResolutionTaskWorkflow(FeedRepository.ThreadContext threadContext) {
+      super(threadContext);
+      this.testCaseResolutionStatusRepository =
+          (TestCaseResolutionStatusRepository) Entity.getEntityTimeSeriesRepository(Entity.TEST_CASE_RESOLUTION_STATUS);
+    }
+
+    @Override
+    @Transaction
+    public TestCase performTask(String userName, ResolveTask resolveTask) {
+
+      // We need to get the latest test case resolution status to get the state id
+      TestCaseResolutionStatus latestTestCaseResolutionStatus =
+          testCaseResolutionStatusRepository.getLatestRecord(resolveTask.getTestCaseFQN());
+
+      if (latestTestCaseResolutionStatus == null) {
+        throw new EntityNotFoundException(
+            String.format("Failed to find test case resolution status for %s", resolveTask.getTestCaseFQN()));
+      }
+      User user = getEntityByName(Entity.USER, userName, "", Include.ALL);
+      TestCaseResolutionStatus testCaseResolutionStatus =
+          new TestCaseResolutionStatus()
+              .withId(UUID.randomUUID())
+              .withStateId(latestTestCaseResolutionStatus.getStateId())
+              .withTimestamp(System.currentTimeMillis())
+              .withTestCaseResolutionStatusType(TestCaseResolutionStatusTypes.Resolved)
+              .withTestCaseResolutionStatusDetails(
+                  new Resolved()
+                      .withTestCaseFailureComment(resolveTask.getNewValue())
+                      .withTestCaseFailureReason(resolveTask.getTestCaseFailureReason())
+                      .withResolvedBy(user.getEntityReference()))
+              .withUpdatedAt(System.currentTimeMillis())
+              .withTestCaseReference(latestTestCaseResolutionStatus.getTestCaseReference())
+              .withUpdatedBy(user.getEntityReference());
+
+      Entity.getCollectionDAO()
+          .testCaseResolutionStatusTimeSeriesDao()
+          .insert(
+              testCaseResolutionStatus.getTestCaseReference().getFullyQualifiedName(),
+              Entity.TEST_CASE_RESOLUTION_STATUS,
+              JsonUtils.pojoToJson(testCaseResolutionStatus));
+      testCaseResolutionStatusRepository.postCreate(testCaseResolutionStatus);
+      return Entity.getEntity(testCaseResolutionStatus.getTestCaseReference(), "", Include.ALL);
+    }
+
+    @Override
+    @Transaction
+    public void closeTask(String userName, CloseTask closeTask) {
+      // closing task in the context of test case resolution status means that the resolution task has been reassigned
+      // to someone else
+      TestCaseResolutionStatus latestTestCaseResolutionStatus =
+          testCaseResolutionStatusRepository.getLatestRecord(closeTask.getTestCaseFQN());
+      if (latestTestCaseResolutionStatus == null) {
+        return;
+      }
+
+      if (latestTestCaseResolutionStatus
+          .getTestCaseResolutionStatusType()
+          .equals(TestCaseResolutionStatusTypes.Resolved)) {
+        // if the test case is already resolved then we'll return. We don't need to update the state
+        return;
+      }
+
+      User user = Entity.getEntityByName(Entity.USER, userName, "", Include.ALL);
+      User assignee = Entity.getEntityByName(Entity.USER, closeTask.getComment(), "", Include.ALL);
+      TestCaseResolutionStatus testCaseResolutionStatus =
+          new TestCaseResolutionStatus()
+              .withId(UUID.randomUUID())
+              .withStateId(latestTestCaseResolutionStatus.getStateId())
+              .withTimestamp(System.currentTimeMillis())
+              .withTestCaseResolutionStatusType(TestCaseResolutionStatusTypes.Assigned)
+              .withTestCaseResolutionStatusDetails(new Assigned().withAssignee(assignee.getEntityReference()))
+              .withUpdatedAt(System.currentTimeMillis())
+              .withTestCaseReference(latestTestCaseResolutionStatus.getTestCaseReference())
+              .withUpdatedBy(user.getEntityReference());
+      Entity.getCollectionDAO()
+          .testCaseResolutionStatusTimeSeriesDao()
+          .insert(
+              testCaseResolutionStatus.getTestCaseReference().getFullyQualifiedName(),
+              Entity.TEST_CASE_RESOLUTION_STATUS,
+              JsonUtils.pojoToJson(testCaseResolutionStatus));
+      testCaseResolutionStatusRepository.postCreate(testCaseResolutionStatus);
+    }
   }
 
   public class TestUpdater extends EntityUpdater {
